--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.3.9"
+    "version": "3.9.0"
+  },
+  "scripts": {
+    "build": "hexo clean && hexo g && hexo d"
   },
   "dependencies": {
     "hexo": "^3.2.0",
