--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Liansheng's Blog
-subtitle: Enjoy Life
-description: liansheng
-author: liansheng
+title: 王泽斌的个人网站
+subtitle: What I cannot create, I do not understand
+description: Python,
+author: wangzebin
 language: zh-Hans
 timezone: Asia/Shanghai
 avator: /images/logo.jpg
